# OpenCV-Hand-Spotify-Controller

./: README.md
handControl/: README.md  pyproject.toml
handControl/handcontrol/: main.py
