[tool.poetry]
name = "handcontrol"
version = "0.1.0"
description = ""
authors = ["Possum-Tsar <67453063+Possum-Tsar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
mediapipe = "^0.10.9"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
